cancel button modified

--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@ modal-fullscreen-md-down
                     </div>
 
                     <div>
-                        <button type="cancel" class="btn btn-secondary btn-sm">Cancel</button>
+                        <button type="reset" class="btn btn-secondary btn-sm">Cancel</button>
                     <button type="submit" class="btn btn-primarey btn-sm">login</button>
                     </div>
 
